[AGAA] 11_01: finish reading [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -172,6 +172,14 @@ Applications of Trigonometry and Vectors
 <a href="10_07.html">More Parametric Equations</a>
 
 </li></ol>
+</li><li>
+Further Topics in Algebra
+
+<ol>
+<li>
+<a href="11_01.html">Sequences and Series</a>
+
+</li></ol>
 </li></ol>
 </div>
   
