[AGAA] Finisho notes for 11_02 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -179,6 +179,9 @@ Further Topics in Algebra
 <li>
 <a href="11_01.html">Sequences and Series</a>
 
+</li><li>
+<a href="11_02.html">Arithmetric Sequences and Series</a>
+
 </li></ol>
 </li></ol>
 </div>
